[Split Checkout] Stop horizontal scroll on body in order summary page

--- a/app/webpacker/css/darkswarm/split-checkout.scss
+++ b/app/webpacker/css/darkswarm/split-checkout.scss
@@ -306,3 +306,8 @@
     }
   }
 }
+
+#line-items {
+  display: block;
+  overflow-x: auto;
+}
